--- a/template/GrandesArtistasMarciales.html
+++ b/template/GrandesArtistasMarciales.html
@@ -2,8 +2,9 @@
     <head>
         <meta charset="UTF-16"> 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link type="text/css" rel="stylesheet" href="../../css/materialize.min.css"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="../../css/Madagascar.css">
+        <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../css/GrandesArtistasMaricales.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
         <title>Grandes Artistas Marciales</title>
 
     </head> 
@@ -14,8 +15,7 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo center">Martes Arciales</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="../MartesArciales.html">Inicio</a></li>
-                    <li><a href="cinturones.html">Cinturones</a></li>
+                    <li><a href="../template/MartesArciales.html">Inicio</a></li>
                 </ul>
                     <ul id="nav-mobile" class="left hide-on-med-and-down">
                     <li><a href="collapsible.html">Grandes artistas marciales</a></li>
@@ -26,19 +26,37 @@
     <ul class="collapsible" data-collapsible="accordion">
     <li>
       <div class="collapsible-header active"><i class="material-icons">filter_drama</i>Miyamoto Musashiu</div>
-      <div class="collapsible-body"><span>(1584 - 19 de mayo de 1645) fue un famoso guerrero del Japón feudal. También es conocido como Shimmen Takezo, Miyamoto Bennosuke, o por su nombre budista Niten Doraku. Para mas informacion del Kung fu pulsa <a href="../ArtesMarcialesDKdaPais/KungFu.html"> aqui</a>.
-         
-                                    </span></div>
+      <div class="collapsible-body"><span>(1584 - 19 de mayo de 1645) fue un famoso guerrero del Japón feudal. También es conocido como Shimmen Takezo, Miyamoto Bennosuke, o por su nombre budista Niten Doraku. Segun cuentan las leyendas un buen día entró un vagabundo con dos espadas de gran calidad en una taberna pidiendo comida. El sujeto apestaba y alrededor suyo revoloteaban tres moscas atraídas por el mal olor que despedía. Al verlo sentado en una mesa, comiendo, dos vecinos del pueblo empezaron a hablar sobre aquel personaje, preguntándose a quién habría robado aquellos aceros, y tachándolo de ladrón y de pordiosero, cuando, en un momento dado y sin mediar palabra, el vagabundo alzó sus palillos en tres suaves y ágiles movimientos haciendo caer a las tres moscas sobre la mesa después de haberlas atrapado con los mismos. Ambos pueblerinos huyeron de la taberna despavoridos, pues, sin duda, ese era Miyamoto Musashi.</span></div>
+    <img class="tamañoImagen" src="../Images/miyamoto.gif">
+                                    
     </li>
     <li>
-      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Wing-Chun</div>
-      <div class="collapsible-body"><span>El Wing-Chun esta orientado a la defensa personal creado por una monja superviviente del templo de Shaolin, llamada Ng Mui. Utiliza golpes de puño, golpes de mano abierta, no usa bloqueos sino que la defensa es siempre un tipo de ataque, desvíos, agarres, luxaciones y lanzamientos, además de armas tradicionales. El cual enfatiza el combate a media y corta distancia.Para mas informacion del Wing-Chun pulsa <a href="../ArtesMarcialesDKdaPais/WingChun.html"> aqui</a>.</span></div>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i> Dr. Jigoro Kano</div>
+      <div class="collapsible-body"><span>El Dr. Jigoro Kano fue el maestro fundador del arte marcial y deporte de combate <a href="ArtesMarcialesDKdaPais/Judo.html">Judo</a>.Kanō logró que el Judo se incorporara con exitó al sistema educativo japonés, al ejército, e inclusive a la policía japonesa desde el principio del siglo XX, incluyendo la defensa contra golpes, y contra técnicas modernas como la defensa ante varios tipos de agresión con armas de fuego recopiladas en sus formas o kata.</span></div>
+            <img class="tamañoImagen" src="../Images/judoteacher.jpg">
+
     </li>
-       <li>
-      <div class="collapsible-header active"><i class="material-icons">filter_drama</i>Bajiquan</div>
-      <div class="collapsible-body"><span>Es un arte marcial chino que despliega golpes explosivos de rango corto como los codos, hombros etc. Es originario de la provincia de Hebei, en el área de Cangzhou. Tanto el estilo de combate como la filosofía del Baji Quan provienen de fuentes filosóficas del taoísmo, como los sacerdotes taoístas de Wudang, el clásico libro del I Ching, y otras fuentes que se remontan a la época de las dinastías Yuan y Ming1(Siglo XIII) Para mas informacion sobre el Bajiquan pulsa <a href="../ArtesMarcialesDKdaPais/Bajiquan.html">aqui</a>​</span></div>
+            <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Bruce Lee</div>
+      <div class="collapsible-body"><span>Bruce Lee, nacido como Lee Jun-Fanfue un destacado artista marcial, maestro de artes marciales, actor, cineasta, filósofo y escritor estadounidense de origen chino, reconocido en el mundo entero por ser el renovador y exponente de las artes marciales dedicando su vida a dicha disciplina, buscando la perfección y la verdad, llegando a crear su propio método de combate y filosofía de vida, el Jun Fan Gung-Fu, que tiempo después y sumado a su concepto filosófico se llamaría, el Jeet Kune Do o el camino del puño interceptor.</span></div>
+            <img class="tamañoImagen" src="../Images/bruce-lee-enter-the-dragon-213734.jpg">
+
     </li>
-  </ul>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Fiódor Yemeliánenko</div>
+      <div class="collapsible-body"><span>es un político ruso y peleador de artes marciales mixtas (MMA, por sus siglas en inglés), judo y sambo. Es mundialmente famoso por sus logros en los deportes de combate, entre los que se encuentran el campeonato mundial de sambo en cuatro ocasiones y varias medallas de bronce en los campeonatos nacionales de judo. Ostenta el logro de haber sido ganador de 5 grandes campeonatos mundiales de MMA simultáneamente: el de peso abierto y el de peso pesado de Fighting Network RINGS; el mundial de peso pesado y el 2004 Grand Prix de peso completo de PRIDE Fighting Championships; y el de peso completo de la "World Alliance of Mixed Martial Arts" o W.A.M.M.A..</span></div>
+            <img class="tamañoImagen" src="../Images/fedor-emeli-2.0.0.jpg">
+
+    </li>
+        <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>Mike Tyson</div>
+      <div class="collapsible-body"><span>Mike, una verdadera leyenda en el mundo del boxeo por su gran resistencia y por su principal especialidad, el bloqueo.Mike pasó una infancia muy dura, su padre lo abandonó, le pegaban, y con solo 13 años de edad el boxeador ya había sido arrestado alrededor de 38 veces.Su debut profesional en el mundo del boxeo fue en el año 1985, y aproximadamente 1 año después Tyson consiguió el titulo mundial.
+      Entre sus peleas mas polémicas esta la del año 1997 donde fue descalificado al morder y arrancar parte de la oreja derecha de su contrincante Holyfield</span></div>
+            <img class="tamañoImagen" src="../Images/mike.jpg">
+
+    </li>         
+        
+        </ul>
            
       <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
@@ -46,14 +64,11 @@
     
     
     </body>
-    
-    
-  
-       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../../js/materialize.min.js"></script>
-    <script type="text/javascript" src="../../js/tailandia.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../js/materialize.min.js"></script>
+    <script type="text/javascript" src="../js/GrandesArtistasMarciales.js"></script>
     <script>
         $(".dropdown-button").dropdown();
-    </script> 
+    </script>
     
 </html>
