--- a/template/MartesArciales.html
+++ b/template/MartesArciales.html
@@ -18,10 +18,9 @@
                 <a href="#" class="brand-logo center">Martes Arciales</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
                     <li><a href="../template/MartesArciales.html">Inicio</a></li>
-                    <li><a href="cinturones.html">Cinturones</a></li>
                 </ul>
                     <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="collapsible.html">Grandes artistas marciales</a></li>
+                    <li><a href="../template/GrandesArtistasMarciales.html">Grandes artistas marciales</a></li>
                     </ul>  
             </div>
         </nav>
@@ -168,10 +167,5 @@
         
 
     </body>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../js/materialize.min.js"></script>
-    <script type="text/javascript" src="../js/martesArciales.js"></script>
-    <script>
-        $(".dropdown-button").dropdown();
-    </script>
+c
 </html>
